--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ChatGPT Image Jun 17, 2025, 10_53_29 PM.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PolicyWriter AI</title>
   </head>
