--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/ChatGPT Image Jun 17, 2025, 10_53_29 PM.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/ChatGPT Image Jun 17, 2025, 10_53_29 PM.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PolicyWriter AI</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-1NGBQ1QEDF"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-1NGBQ1QEDF");
+    </script>
   </body>
 </html>
